--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -1,14 +1,15 @@
-# Hello Panel
-showHelloButtonText=Say Hello
-helloMsg=Hello {0}
-
 # App Descriptor
 appTitle=My demo app
 appDescription=A simple demo app
 
+# Hello Panel
+showHelloButtonText=Say Hello
+helloMsg=Hello {0}
+
 # Tabs
 gettingStartedFilter=Getting Started
 layoutFilter=Containers and Layout
+dataBindingFilter=Data Binding
 
 # Layout Content
 layoutFormName=Name
@@ -22,3 +23,6 @@ layoutDraftButton=Save Draft
 layoutCountryGermany=Germany
 layoutCountryUSA=USA
 layoutCountryEngland=England
+
+# Data Binding Content
+productListTitle=Products
