Week 2 Unit 6 WORKING WITH ODATA SERVICES Display Data From a Related Entity Using Expand

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -29,6 +29,7 @@ productListTitle=Products
 formatterMailDelivery=deliver via mail
 formatterParcelDelivery=deliver via parcel
 formatterCarrierDelivery=deliver via carrier
+statusDeliveryFrom=Delivered from
 
 # Data Binding Details Panel
 productDetailPanelHeader=Product Details
@@ -37,3 +38,4 @@ productDetailPanelName=Product Name
 productDetailPanelPrice=Price
 productDetailPanelDescription=Description
 linebreak=\n
+
