Week 2 Bonus: Map location formatter  Show a panel with the text “Location” below the address form  Inside the panel, show the address visually using an sap.m.Image control  Write a formatter named formatMapUrl that converts the address to a URL for the image  Pass in the fields from the “address” model to the formatter function  Verify that the image displays the address displayed in the form above

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -32,10 +32,12 @@ formatterCarrierDelivery=deliver via carrier
 statusDeliveryFrom=Delivered from
 
 # Data Binding Details Panel
-productDetailPanelHeader=Product Details
+productDetailsPanelHeader=Product Details
 productDetailPanelID=Product ID
 productDetailPanelName=Product Name
 productDetailPanelPrice=Price
 productDetailPanelDescription=Description
 linebreak=\n
 
+# Map Url 
+mapUrl=https://maps.googleapis.com/maps/api/staticmap?center=
