Unit 1 - Exercises: Navigation and Routing Concepts Implement a new “add” route Implement a new “add” view Implement a new “add” controller

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -91,6 +91,10 @@ shareSendEmailObjectSubject=<Email subject including object identifier PLEASE RE
 #YMSG: Send E-Mail message
 shareSendEmailObjectMessage=<Email body PLEASE REPLACE ACCORDING TO YOUR USE CASE> {0} (id: {1})\r\n{2}
 
+#~~~ Add View ~~~~~~~~~~~~~~~~~~~~~~~~~~
+
+#XTIT: Add view title
+addPageTitle=New Product
 
 #~~~ Not Found View ~~~~~~~~~~~~~~~~~~~~~~~
 
@@ -110,3 +114,4 @@ notFoundText=The requested resource was not found
 
 #YMSG: Error dialog description
 errorText=Sorry, a technical error occurred! Please try again later.
+
