--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -76,6 +76,16 @@ supplierTitle=Supplier
 #XGRP: Map panel title
 mapTitle=Map
 
+#XTIT: Mail delivery formatter text
+formatterMailDelivery=deliver via mail
+
+#XTIT: Parcel delivery formatter text
+formatterParcelDelivery=deliver via parcel
+
+#XTIT: Carrier delivery formatter text
+formatterCarrierDelivery=deliver via carrier
+
+
 
 #~~~ Share Menu Options ~~~~~~~~~~~~~~~~~~~~~~~
 
