Week 4 Unit 7 Bonus Exercise add delete action, button, function confirm dialog

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -31,6 +31,8 @@ tableNameColumnTitle=Product
 #XTIT: The title of the column containing the Price and the unit of measure
 tableUnitNumberColumnTitle=Price
 
+actionColumnTitle=Action
+
 #XBLI: text for a table with no data
 tableNoDataText=No products are currently available
 
@@ -90,6 +92,12 @@ productRatingButtonText=Submit
 
 #YMSG: Submit Rating Success Message
 productRatingSuccess=Your new rating value is {0}
+
+#YMSG: Product Deletion Success Message
+worklistDeleteProductSuccess=Product {0} has been deleted successfully
+
+#YMSG: Product Deletion Error Message
+worklistDeleteProductError=Product {0} could not be deleted
 
 
 #~~~ Share Menu Options ~~~~~~~~~~~~~~~~~~~~~~~
